# dapps-supply-chain

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml  docs.yml  release.yml
deploy/: Cargo.toml
deploy/src/: lib.rs  main.rs
frontend/: package-lock.json  package.json
io/: Cargo.toml
io/src/: lib.rs
src/: contract.rs  io.rs  lib.rs  tx_manager.rs  utils.rs
src/contract/: tx_manager.rs
state/: Cargo.toml
state/src/: lib.rs  state.rs
tests/: approve_reuse.rs  nft_transfer.rs  other.rs  ownership_and_role.rs  receive.rs  state.rs  state_consistency.rs
tests/utils/: check.rs  common.rs  fail.rs  ft.rs  mod.rs  nft.rs  prelude.rs  schain.rs  sft.rs
