[package]
name = "supply-chain"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
supply-chain-io = { path = "io" }
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
nft-io = { git = "https://github.com/gear-dapps/non-fungible-token.git", tag = "0.2.8" }
ft-main-io = { git = "https://github.com/gear-dapps/sharded-fungible-token.git", tag = "0.1.3" }
ft-logic-io = { git = "https://github.com/gear-dapps/sharded-fungible-token.git", tag = "0.1.3" }
gear-lib = { git = "https://github.com/gear-dapps/gear-lib.git", tag = "0.3.4" }
hashbrown = "0.13"

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git" }
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable", features = ["debug"] }
# TODO: remove a pin to the "stable" branch when building will be fixed.
gclient = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
sp-core-hashing = "5"
subxt = { git = "https://github.com/paritytech/subxt", rev = "d41f6574", default-features = false }
primitive-types = "0.12"
tokio = "1"
pretty_assertions = "1"
supply-chain-state = { path = "state" }
deploy = { path = "deploy" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
supply-chain-io = { path = "io" }

[features]
default = ["dummy"]
dummy = []

[workspace]
members = ["state", "deploy"]
