[package]
name = "supply-chain"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
supply-chain-io = { path = "io" }
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
nft-io = { git = "https://github.com/gear-dapps/non-fungible-token.git", tag = "0.2.8" }
ft-main-io = { git = "https://github.com/gear-dapps/sharded-fungible-token.git", tag = "0.1.3" }
ft-logic-io = { git = "https://github.com/gear-dapps/sharded-fungible-token.git", tag = "0.1.3" }
gear-lib = { git = "https://github.com/gear-dapps/gear-lib.git", tag = "0.3.4" }
hashbrown = "0.13"

[dev-dependencies]
# TODO: pin to the "stable" branch when
# https://github.com/gear-tech/gear/pull/2165 will be merged into it.
gtest = { git = "https://github.com/gear-tech/gear.git", rev = "ed517d8" }
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable", features = ["debug"] }
# TODO: remove a pin when building will be fixed.
gclient = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
sp-core-hashing = "5"
subxt = { git = "https://github.com/paritytech/subxt", rev = "d41f6574", default-features = false }
primitive-types = "0.12"
tokio = "1"
pretty_assertions = "1"
supply-chain-state = { path = "state" }
deploy = { path = "deploy" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
supply-chain-io = { path = "io" }

[features]
default = ["dummy"]
dummy = []

[workspace]
members = ["state", "deploy"]
