[package]
name = "supply-chain"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
supply-chain-io = { path = "io" }
gstd.workspace = true
nft-io.workspace = true
ft-main-io.workspace = true
gear-lib.workspace = true
hashbrown.workspace = true

[dev-dependencies]
gtest.workspace = true
gstd = { workspace = true, features = ["debug"] }
gclient.workspace = true
tokio.workspace = true
supply-chain-state.workspace = true
deploy.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
supply-chain-io.workspace = true
gmeta.workspace = true

[features]
default = ["binary-vendor"]
binary-vendor = []

[workspace]
members = ["state", "deploy"]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gclient = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gmeta = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gtest = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gear-lib = { git = "https://github.com/gear-dapps/gear-lib", tag = "0.3.7" }
nft-io = { git = "https://github.com/gear-dapps/non-fungible-token", tag = "0.2.11" }
ft-main-io = { git = "https://github.com/gear-dapps/sharded-fungible-token", tag = "2.1.2" }
hashbrown = "0.13"
tokio = "1"
supply-chain-state = { path = "state" }
supply-chain-io = { path = "io" }
subxt = { version = "0.27", default-features = false }
supply-chain = { path = "." }
sp-core-hashing = "6"
primitive-types = "0.12"
clap = { version = "4", default-features = false }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
deploy = { path = "deploy" }
