[package]
name = "deploy"
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO: remove a pin to the "stable" branch when building will be fixed.
gclient = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
subxt = { git = "https://github.com/paritytech/subxt", rev = "d41f6574", default-features = false }
supply-chain-io = { path = "../io" }
supply-chain-state = { path = "../state" }
supply-chain = { path = ".." }
sp-core-hashing = "5"
primitive-types = "0.12"
nft-io = { git = "https://github.com/gear-dapps/non-fungible-token.git", tag = "0.2.8" }
ft-main-io = { git = "https://github.com/gear-dapps/sharded-fungible-token.git", tag = "0.1.3" }
tokio = "1"
clap = { version = "4", default-features = false, features = ["std"] }
